unpackaged/main/default/objects/Yodlee_User_Transaction__c/Yodlee_User_Transaction__c.object-meta.xml
<CustomObject>
    <label>Yodlee User Transaction</label>
    <nameField>
        <displayFormat>YUT-{0000000}</displayFormat>
        <label>Yodlee User Transaction Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Yodlee User Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>