unpackaged/main/default/objects/Yodlee_User_Transaction__c/fields/Account_Holder_Name1__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Name1__c</fullName>
    <formula>Yodlee_User_account__r.Account_Holder_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Holder Name</label>
    <type>Text</type>
</CustomField>