unpackaged/main/default/objects/Yodlee_User_Transaction__c/fields/Account_Holder_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Holder_Name__c</fullName>
    <description>Account Holder Name pulled from Yodlee User Account</description>
    <label>Account Holder Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>