unpackaged/main/default/objects/Yodlee_User_Transaction__c/fields/Debit__c.field-meta.xml
<CustomField>
    <fullName>Debit__c</fullName>
    <label>Debit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>