unpackaged/main/default/objects/Yodlee_User_Transaction__c/fields/postDate__c.field-meta.xml
<CustomField>
    <fullName>postDate__c</fullName>
    <label>postDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>