unpackaged/main/default/objects/Yodlee_User_Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CREDIT</fullName>
            </value>
            <value>
                <fullName>DEBIT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>