unpackaged/main/default/objects/Yodlee_User_Transaction__c/fields/Yodlee_Application__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>genesis__Applications__c</referenceTo>
    <relationshipLabel>Yodlee User Transactions</relationshipLabel>
    <relationshipName>Yodlee_User_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>