unpackaged/main/default/objects/Yodlee_User_Transaction__c/fields/Yodlee_User_account__c.field-meta.xml
<CustomField>
    <fullName>Yodlee_User_account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>lookup to Yodlee User Account object</description>
    <label>Yodlee User Account</label>
    <referenceTo>Yodlee_User_Account__c</referenceTo>
    <relationshipLabel>Yodlee User Transactions</relationshipLabel>
    <relationshipName>Yodlee_User_Transactions</relationshipName>
    <type>Lookup</type>
</CustomField>