unpackaged/main/default/objects/Yodlee_User_Transaction__c/fields/YodleeBankAccountId__c.field-meta.xml
<CustomField>
    <fullName>YodleeBankAccountId__c</fullName>
    <label>YodleeBankAccountId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>